AAE-786: Updated spring boot, fix gitignore
Ref Activiti/Activiti#2991

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
 target
 /local
 
-# Netbeans and IntelliJ files
-!.gitignore
-/nbproject
-/*.ipr
-/*.iws
-*.iml
+### IntelliJ IDEA ###
 .idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
 # Repository wide ignore mac DS_Store files
 .DS_Store
