--- a/activiti-api-impl/activiti-api-runtime-shared-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-runtime-shared-impl/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-api-impl</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.128</version>
   </parent>
   <artifactId>activiti-api-runtime-shared-impl</artifactId>
   <name>Activiti API :: Common Runtime Implementation</name>
