--- a/activiti-core-dependencies/pom.xml
+++ b/activiti-core-dependencies/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.128</version>
   </parent>
   <artifactId>activiti-core-dependencies</artifactId>
   <packaging>pom</packaging>
