--- a/activiti-spring-resource-loader/pom.xml
+++ b/activiti-spring-resource-loader/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.activiti</groupId>
         <artifactId>activiti-core-dependencies</artifactId>
-        <version>7.1.0-SNAPSHOT</version>
+        <version>7.1.128</version>
         <relativePath>../activiti-core-dependencies</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
