fix child versions

--- a/activiti-dependencies/pom.xml
+++ b/activiti-dependencies/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
-    <version>7.1.32</version>
+    <version>7.1.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
   
