--- a/activiti-api/pom.xml
+++ b/activiti-api/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
-    <version>7.1.32</version> <!-- using fixed version for CI/CD -->
+    <version>7.1.0-SNAPSHOT</version> <!-- using fixed version for CI/CD -->
     <relativePath/>
   </parent>
   <groupId>org.activiti.api</groupId>
