--- a/activiti-core-common/pom.xml
+++ b/activiti-core-common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
-    <version>7.1.32</version>
+    <version>7.1.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <groupId>org.activiti.core.common</groupId>
