--- a/activiti-api/pom.xml
+++ b/activiti-api/pom.xml
@@ -56,9 +56,9 @@
     <!-- configuration properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <activiti-api.version>${project.version}</activiti-api.version>
-    <activiti-build.version>7.1.32</activiti-build.version>
+    <activiti-build.version>7.1.0-SNAPSHOT</activiti-build.version>
 
   </properties>
 
