--- a/activiti-core-common/pom.xml
+++ b/activiti-core-common/pom.xml
@@ -15,8 +15,8 @@
   <description>Activiti Core :: Common</description>
   <url>http://activiti.org</url>
   <properties>
-    <activiti-build.version>7.1.32</activiti-build.version>
-    <activiti-api.version>7.1.59</activiti-api.version>
+    <activiti-build.version>7.1.0-SNAPSHOT</activiti-build.version>
+    <activiti-api.version>7.1.0-SNAPSHOT</activiti-api.version>
     <activiti-core-common.version>${project.version}</activiti-core-common.version>
     <commons-io.version>2.6</commons-io.version>
   </properties>
