--- a/activiti-api/pom.xml
+++ b/activiti-api/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
     <version>7.1.0-SNAPSHOT</version> <!-- using fixed version for CI/CD -->
-    <relativePath/>
+    <relativePath>../activiti-build</relativePath>
   </parent>
   <groupId>org.activiti.api</groupId>
   <artifactId>activiti-api</artifactId>
