--- a/activiti-examples/activiti-api-spring-integration-example/pom.xml
+++ b/activiti-examples/activiti-api-spring-integration-example/pom.xml
@@ -5,17 +5,17 @@
 
   <groupId>org.activiti.examples</groupId>
   <artifactId>activiti-api-spring-integration-example</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>7.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Activiti API Spring Integration Examples</name>
   <description>Activiti API Spring Integration Examples</description>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.10.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>org.activiti.examples</groupId>
+    <artifactId>activiti-examples-parent</artifactId>
+    <version>7.1.0-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
 
   <properties>
