--- a/activiti-examples/pom.xml
+++ b/activiti-examples/pom.xml
@@ -3,13 +3,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.activiti.build</groupId>
+        <artifactId>activiti-parent</artifactId>
+        <version>7.1.0-SNAPSHOT</version>
+        <relativePath>../activiti-build</relativePath>
+    </parent>
+
     <groupId>org.activiti.examples</groupId>
     <artifactId>activiti-examples-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>7.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Activiti Examples :: Parent</name>
     <description>Activiti Examples :: Parent</description>
+
+    <properties>
+        <spring-boot.version>2.1.10.RELEASE</spring-boot.version>
+    </properties>
 
     <modules>
         <module>activiti-api-basic-full-example-bean</module>
