--- a/activiti-core-common/pom.xml
+++ b/activiti-core-common/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
     <version>7.1.0-SNAPSHOT</version>
-    <relativePath/>
+    <relativePath>../activiti-build</relativePath>
   </parent>
   <groupId>org.activiti.core.common</groupId>
   <artifactId>activiti-core-common-parent</artifactId>
@@ -15,8 +15,8 @@
   <description>Activiti Core :: Common</description>
   <url>http://activiti.org</url>
   <properties>
-    <activiti-build.version>7.1.0-SNAPSHOT</activiti-build.version>
-    <activiti-api.version>7.1.0-SNAPSHOT</activiti-api.version>
+    <activiti-build.version>${project.version}</activiti-build.version>
+    <activiti-api.version>${project.version}</activiti-api.version>
     <activiti-core-common.version>${project.version}</activiti-core-common.version>
     <commons-io.version>2.6</commons-io.version>
   </properties>
