--- a/activiti-examples/activiti-api-basic-connector-example/pom.xml
+++ b/activiti-examples/activiti-api-basic-connector-example/pom.xml
@@ -5,17 +5,17 @@
 
   <groupId>org.activiti.examples</groupId>
   <artifactId>activiti-api-basic-connector-examples</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>7.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Activiti API Basic Connector Examples</name>
   <description>Activiti API Basic Connector Examples</description>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.10.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>org.activiti.examples</groupId>
+    <artifactId>activiti-examples-parent</artifactId>
+    <version>7.1.0-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
 
   <properties>
@@ -24,7 +24,7 @@
     <java.version>11</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <activiti-dependencies.version>7.1.0-SNAPSHOT</activiti-dependencies.version>
+    <activiti-dependencies.version>${project.version}</activiti-dependencies.version>
   </properties>
   <dependencyManagement>
     <dependencies>
