--- a/activiti-build/pom.xml
+++ b/activiti-build/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <version>7.1.0-SNAPSHOT</version>
-    <artifactId>activiti-mono-aggregator</artifactId>
+    <artifactId>activiti-aggregator</artifactId>
     <relativePath>../</relativePath>
   </parent>
 
