--- a/pom.xml
+++ b/pom.xml
@@ -67,4 +67,14 @@
     <module>activiti-examples</module>
   </modules>
 
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
