--- a/activiti-core-common/pom.xml
+++ b/activiti-core-common/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
     <version>7.1.0-SNAPSHOT</version>
-    <relativePath>../activiti-build</relativePath>
+    <relativePath>../</relativePath>
   </parent>
   <groupId>org.activiti.core.common</groupId>
   <artifactId>activiti-core-common-parent</artifactId>
