--- a/activiti-dependencies-parent/pom.xml
+++ b/activiti-dependencies-parent/pom.xml
@@ -22,6 +22,7 @@
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
     <version>7.1.0-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
   <artifactId>activiti-dependencies-parent</artifactId>
   <packaging>pom</packaging>
