--- a/activiti-dependencies/pom.xml
+++ b/activiti-dependencies/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?> 
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -7,9 +7,9 @@
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
     <version>7.1.0-SNAPSHOT</version>
-    <relativePath>../activiti-build</relativePath>
+    <relativePath>../</relativePath>
   </parent>
-  
+
   <groupId>org.activiti.dependencies</groupId>
   <artifactId>activiti-dependencies-parent</artifactId>
   <version>7.1.0-SNAPSHOT</version>
@@ -97,7 +97,7 @@
       </plugin>
     </plugins>
   </build>
-  
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -135,7 +135,7 @@
       <artifactId>activiti-core-dependencies</artifactId>
       <version>${activiti.version}</version>
       <type>pom</type>
-    </dependency>    
+    </dependency>
   </dependencies>
 
   <modules>
