Fix Mergify configuration

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -15,11 +15,13 @@ pull_request_rules:
   - name: automatic merge when CI passes and 1 approving reviews and label ready-to-merge
     conditions:
       - "#approved-reviews-by>=1"
+      - "#review-requested=0"
+      - "#changes-requested-reviews-by=0"
       - status-success=continuous-integration/jenkins/pr-head
       - status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       - status-success=license/cla
-      - base=develop
+      - label!=do-not-merge
     actions:
       delete_head_branch: {}
       merge:
