--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,7 +3,7 @@ pull_request_rules:
     conditions:
       - author=jx-activiti-cloud
       - status-success=continuous-integration/jenkins/pr-head
-      - status-success=continuous-integration/travis-ci/pr
+      #- status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       #- status-success=license/cla
       - label!=do-not-merge
@@ -18,7 +18,7 @@ pull_request_rules:
       - "#review-requested=0"
       - "#changes-requested-reviews-by=0"
       - status-success=continuous-integration/jenkins/pr-head
-      - status-success=continuous-integration/travis-ci/pr
+      #- status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       - status-success=license/cla
       - label!=do-not-merge
